[package]
name = "fift-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fift = "0.1"
getrandom = { version = "0.2", features = ["js"] }
gloo-utils = { version = "0.2", default-features = false }
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = [] }
